proper project name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-project",
+  "name": "the-dr-nefario-vanilla-setup",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
